création d'un tableau dans tableau.html

--- a/tableau.html
+++ b/tableau.html
@@ -1,17 +1,16 @@
 <html>
 
-<head>
-<meta charset="UTF-8" />
-<title>Programmation et Projet encadré</title>
-</head>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Programmation et Projet encadré</title>
+	</head>
 
-<body>
-<h1>Page de tableau avec une liste hihihi !</h1>
-<ul>
-	<li>rien</li>
-	<li>toujours rien</li>
-</ul>
-<a href="index.html">INDEX</a>
-</body>
+	<body>
+		<table>
+			<tr><th>ligne</th><th>code</th><th>URL</th></tr>
+			<tr><th>1</th><th>200</th><th>www.asahi.com</th></tr>
+		</table>
+		<a href="index.html">INDEX</a>
+	</body>
 
 </html>
