modification script pour compter le nombre d'occurrences dans le corpus

--- a/exercices/construction-corpus/tableaux/tableau_jp.html
+++ b/exercices/construction-corpus/tableaux/tableau_jp.html
@@ -2,15 +2,15 @@
 <h2>Tableau URL_jp :</h2>
 <br/>
 <table>
-<tr><th>ligne</th><th>code</th><th>URL</th><th>encodage</th></tr>
-<tr><td>1</td><td>200</td><td><a href="https://www.asahi.com/articles/ASPDY6X2PPDSUTIL015.html">https://www.asahi.com/articles/ASPDY6X2PPDSUTIL015.html</a></td><td>UTF-8</td></tr>
-<tr><td>2</td><td>200</td><td><a href="https://nordot.app/957278396878274560?c=110564226228225532">https://nordot.app/957278396878274560?c=110564226228225532</a></td><td>UTF-8</td></tr>
-<tr><td>3</td><td>404</td><td><a href="https://news.biglobe.ne.jp/international/1118/jbp_211118_4621488116.html">https://news.biglobe.ne.jp/international/1118/jbp_211118_4621488116.html</a></td><td></td></tr>
-<tr><td>4</td><td>200</td><td><a href="https://news.biglobe.ne.jp/trend/0826/fjk_220826_1569833310.html">https://news.biglobe.ne.jp/trend/0826/fjk_220826_1569833310.html</a></td><td>UTF-8</td></tr>
-<tr><td>5</td><td>200</td><td><a href="https://www.asahi.com/articles/ASQBT4RX3QBSUCVL04Y.html?iref=pc_ss_date_article">https://www.asahi.com/articles/ASQBT4RX3QBSUCVL04Y.html?iref=pc_ss_date_article</a></td><td>UTF-8</td></tr>
-<tr><td>6</td><td>200</td><td><a href="https://www.asahi.com/articles/ASQBK3RGZQBKUPQJ009.html?iref=pc_ss_date_article">https://www.asahi.com/articles/ASQBK3RGZQBKUPQJ009.html?iref=pc_ss_date_article</a></td><td>UTF-8</td></tr>
-<tr><td>7</td><td>200</td><td><a href="https://www.huffingtonpost.jp/entry/story_jp_5e3cb7f5c5b6b70886fd0627">https://www.huffingtonpost.jp/entry/story_jp_5e3cb7f5c5b6b70886fd0627</a></td><td>utf-8</td></tr>
-<tr><td>8</td><td>200</td><td><a href="https://www.tokyo-np.co.jp/article/53888">https://www.tokyo-np.co.jp/article/53888</a></td><td>UTF-8</td></tr>
-<tr><td>9</td><td>200</td><td><a href="https://globalnewsview.org/archives/17803">https://globalnewsview.org/archives/17803</a></td><td>UTF-8</td></tr>
+<tr><th>ligne</th><th>code</th><th>URL</th><th>encodage</th><th>nbr occurrence</th></tr>
+<tr><td>1</td><td>200</td><td><a href="https://www.asahi.com/articles/ASPDY6X2PPDSUTIL015.html">https://www.asahi.com/articles/ASPDY6X2PPDSUTIL015.html</a></td><td>UTF-8</td><td>3</td></tr>
+<tr><td>2</td><td>200</td><td><a href="https://nordot.app/957278396878274560?c=110564226228225532">https://nordot.app/957278396878274560?c=110564226228225532</a></td><td>UTF-8</td><td>13</td></tr>
+<tr><td>3</td><td>404</td><td><a href="https://news.biglobe.ne.jp/international/1118/jbp_211118_4621488116.html">https://news.biglobe.ne.jp/international/1118/jbp_211118_4621488116.html</a></td><td></td><td>0</td></tr>
+<tr><td>4</td><td>200</td><td><a href="https://news.biglobe.ne.jp/trend/0826/fjk_220826_1569833310.html">https://news.biglobe.ne.jp/trend/0826/fjk_220826_1569833310.html</a></td><td>UTF-8</td><td>3</td></tr>
+<tr><td>5</td><td>200</td><td><a href="https://www.asahi.com/articles/ASQBT4RX3QBSUCVL04Y.html?iref=pc_ss_date_article">https://www.asahi.com/articles/ASQBT4RX3QBSUCVL04Y.html?iref=pc_ss_date_article</a></td><td>UTF-8</td><td>0</td></tr>
+<tr><td>6</td><td>200</td><td><a href="https://www.asahi.com/articles/ASQBK3RGZQBKUPQJ009.html?iref=pc_ss_date_article">https://www.asahi.com/articles/ASQBK3RGZQBKUPQJ009.html?iref=pc_ss_date_article</a></td><td>UTF-8</td><td>0</td></tr>
+<tr><td>7</td><td>200</td><td><a href="https://www.huffingtonpost.jp/entry/story_jp_5e3cb7f5c5b6b70886fd0627">https://www.huffingtonpost.jp/entry/story_jp_5e3cb7f5c5b6b70886fd0627</a></td><td>utf-8</td><td>21</td></tr>
+<tr><td>8</td><td>200</td><td><a href="https://www.tokyo-np.co.jp/article/53888">https://www.tokyo-np.co.jp/article/53888</a></td><td>UTF-8</td><td>12</td></tr>
+<tr><td>9</td><td>200</td><td><a href="https://globalnewsview.org/archives/17803">https://globalnewsview.org/archives/17803</a></td><td>UTF-8</td><td>41</td></tr>
 </table>
 </body></html>
